--- a/pom.xml
+++ b/pom.xml
@@ -28,21 +28,21 @@
     <dependency>
       <groupId>com.silverpeas.builder</groupId>
       <artifactId>fileutil</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>1.1</version>
     </dependency>
     <dependency>
       <groupId>com.silverpeas.builder</groupId>
       <artifactId>application-builder</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>1.1</version>
     </dependency>
   </dependencies>
 
   <build>
     <plugins>
       <plugin>
-          <groupId>org.silverpeas.services</groupId>
-          <artifactId>code-formatter-plugin</artifactId>
-        </plugin>
+        <groupId>org.silverpeas.services</groupId>
+        <artifactId>code-formatter-plugin</artifactId>
+      </plugin>
     </plugins>
   </build>
 </project>
