--- a/pom.xml
+++ b/pom.xml
@@ -9,15 +9,15 @@
   </parent>
 
   <scm>
-    <connection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/services/silverpeas-settings/tags/silverpeas-settings-1.3</connection>
-    <developerConnection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/services/silverpeas-settings/tags/silverpeas-settings-1.3</developerConnection>
-    <url>https://repository.silverpeas.org/svn/silverpeas/services/silverpeas-settings/tags/silverpeas-settings-1.3</url>
+    <connection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/services/silverpeas-settings/trunk</connection>
+    <developerConnection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/services/silverpeas-settings/trunk</developerConnection>
+    <url>https://repository.silverpeas.org/svn/silverpeas/services/silverpeas-settings/trunk</url>
   </scm>
   
   <groupId>com.silverpeas.builder</groupId>
   <artifactId>silverpeas-settings</artifactId>
   <packaging>jar</packaging>
-  <version>1.3</version>
+  <version>1.4-SNAPSHOT</version>
   <name>SilverpeasSettings</name>
   
   <dependencies>
