[maven-release-plugin] prepare release silverpeas-settings-1.4
git-svn-id: https://www.silverpeas.org/svn/silverpeas/services/silverpeas-settings/trunk@1797 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/pom.xml
+++ b/pom.xml
@@ -8,15 +8,15 @@
   </parent>
 
   <scm>
-    <connection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/services/silverpeas-settings/trunk</connection>
-    <developerConnection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/services/silverpeas-settings/trunk</developerConnection>
-    <url>https://repository.silverpeas.org/svn/silverpeas/services/silverpeas-settings/trunk</url>
+    <connection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/services/silverpeas-settings/tags/silverpeas-settings-1.4</connection>
+    <developerConnection>scm:svn:https://repository.silverpeas.org/svn/silverpeas/services/silverpeas-settings/tags/silverpeas-settings-1.4</developerConnection>
+    <url>https://repository.silverpeas.org/svn/silverpeas/services/silverpeas-settings/tags/silverpeas-settings-1.4</url>
   </scm>
   
   <groupId>com.silverpeas.builder</groupId>
   <artifactId>silverpeas-settings</artifactId>
   <packaging>jar</packaging>
-  <version>1.4-SNAPSHOT</version>
+  <version>1.4</version>
   <name>SilverpeasSettings</name>
   
   <dependencies>
