--- a/pom.xml
+++ b/pom.xml
@@ -8,15 +8,15 @@
   </parent>
 
   <scm>
-    <connection>scm:svn:https://www.silverpeas.org/svn/silverpeas/services/silverpeas-settings/tags/silverpeas-settings-1.7</connection>
-    <developerConnection>scm:svn:https://www.silverpeas.org/svn/silverpeas/services/silverpeas-settings/tags/silverpeas-settings-1.7</developerConnection>
-    <url>https://www.silverpeas.org/svn/silverpeas/services/silverpeas-settings/tags/silverpeas-settings-1.7</url>
+    <connection>scm:svn:https://www.silverpeas.org/svn/silverpeas/services/silverpeas-settings/trunk</connection>
+    <developerConnection>scm:svn:https://www.silverpeas.org/svn/silverpeas/services/silverpeas-settings/trunk</developerConnection>
+    <url>https://www.silverpeas.org/svn/silverpeas/services/silverpeas-settings/trunk</url>
   </scm>
 
   <groupId>com.silverpeas.builder</groupId>
   <artifactId>silverpeas-settings</artifactId>
   <packaging>jar</packaging>
-  <version>1.7</version>
+  <version>1.8-SNAPSHOT</version>
   <name>SilverpeasSettings</name>
 
   <dependencies>
