Fix an issue in the tests that breaks them in another host than the manu one.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/services/silverpeas-settings/trunk@2413 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
   </dependencies>
 
   <build>
+    <testResources>
+      <testResource>
+        <directory>src/test/resources</directory>
+        <filtering>true</filtering>
+      </testResource>
+    </testResources>
     <plugins>
       <plugin>
         <groupId>org.silverpeas.services</groupId>
