--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,9 @@
   </parent>
 
   <scm>
-    <connection>scm:svn:https://www.silverpeas.org/svn/silverpeas/services/silverpeas-settings/trunk</connection>
-    <developerConnection>scm:svn:https://www.silverpeas.org/svn/silverpeas/services/silverpeas-settings/trunk</developerConnection>
-    <url>https://www.silverpeas.org/svn/silverpeas/services/silverpeas-settings/trunk</url>
+    <connection>scm:svn:https://www.silverpeas.org/svn/silverpeas/services/silverpeas-settings/tags/silverpeas-settings-1.8</connection>
+    <developerConnection>scm:svn:https://www.silverpeas.org/svn/silverpeas/services/silverpeas-settings/tags/silverpeas-settings-1.8</developerConnection>
+    <url>https://www.silverpeas.org/svn/silverpeas/services/silverpeas-settings/tags/silverpeas-settings-1.8</url>
   </scm>
   
   <repositories>
@@ -31,7 +31,7 @@
   <groupId>com.silverpeas.builder</groupId>
   <artifactId>silverpeas-settings</artifactId>
   <packaging>jar</packaging>
-  <version>1.8-SNAPSHOT</version>
+  <version>1.8</version>
   <name>SilverpeasSettings</name>
 
   <dependencies>
