--- a/src/main/resources/default_config.properties
+++ b/src/main/resources/default_config.properties
@@ -21,7 +21,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 SILVERPEAS_HOME_DEPENDANT=${SILVERPEAS_HOME}
 SILVERPEAS_DATA_HOME=${SILVERPEAS_HOME}/data
-SILVERPEAS_DATA_WEB=${SILVERPEAS_DATA_HOME}/web
+SILVERPEAS_DATA_WEB=${SILVERPEAS_HOME}/data/web
 JBOSS_LISTEN_PORT=8000
 JBOSS_SERVER_PROFILE=default
 RAM_MAX=
