--- a/src/main/resources/default_config.properties
+++ b/src/main/resources/default_config.properties
@@ -23,6 +23,7 @@ SILVERPEAS_HOME_DEPENDANT=${SILVERPEAS_HOME}
 SILVERPEAS_DATA_HOME=${SILVERPEAS_HOME}/data
 SILVERPEAS_DATA_WEB=${SILVERPEAS_HOME}/data/web
 JBOSS_LISTEN_PORT=8000
+JBOSS_SSL_LISTEN_PORT=8443
 JBOSS_SERVER_PROFILE=default
 RAM_MAX=
 PERMSIZE_MAX=512
